attempting to fix click events on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,9 +2,6 @@
 /*html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
 */
 
-body, html {
-  height: 100%;
-}
 
 body {
   border-top: 2px solid #0AA4F0;
@@ -30,12 +27,9 @@ body {
   left: 0;
   height: 40px;
   width: 100%;
-  /*box-shadow: 0 0 5px #ccc;*/
   border-top: 1px solid #fafafa;
   background: #fff;
   z-index: 9999;
-
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -63,16 +57,13 @@ h4 {
   font-size: 18px;
 }
 
-
 #container {
   width: 85%;
   max-width: 1200px;
   margin: 0 auto;
-  height: 100%;
   color: #2e2e2e;
   padding: 30px 0 0 0;
 }
-
 
 .inner {
   padding: 0;
@@ -89,7 +80,6 @@ h4 {
 .intro {
   position: absolute;
   width: 500px;
-  /*text-align: justify;*/
   left: 250px;
   top:0;
   z-index:9999;
@@ -148,11 +138,6 @@ h4 {
   cursor: pointer;
 }
 
-.main-block-inner:hover {
- /* background: #F7FE2E;;*/
- /* color: #000;*/
-}
-
 #bottom-container {
   width: 90%;
   margin: 0 auto;
@@ -163,12 +148,9 @@ h4 {
   font-size: 14px;
 }
 
-
-
 #portfolio:hover, #resume:hover, #about_me:hover {
-  cursor: arrow;
+  cursor: pointer;
 }
-
 
 #portfolio_inner, #resume_inner, #about_me_inner {
   position: relative;
@@ -372,10 +354,6 @@ header {
 }
 
 @media (max-width: 535px) {
-
-/*  .main-block {
-    width: 100px;
-  }*/
 
   .intro {
     width: 200px;
